imperative/create_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: sangmin
spec: {}
status: {}
