imperative/nginx_namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: sangmin
spec: {}
status: {}
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
  namespace: sangmin
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
