imperative/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example.ingress
spec:
  ingressClassName: traefik
  rules:
  - host: example.net
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /nginx
        pathType: Prefix
      # - backend:
      #     service:
      #       name: nginx
      #       port:
      #         number: 80
      #   path: /nginx
      #   pathType: Prefix
